--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>spring-chuck-jokes</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-chuck-jokes</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Rest version of Chuck Norris jokes demo app</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>guru.springframework</groupId>
             <artifactId>chuck-norris-for-actuator</artifactId>
+            <version>0.0.2</version>
         </dependency>
     </dependencies>
 
